[openapi] /groups GET
